--- a/app/css/style.css
+++ b/app/css/style.css
@@ -47,18 +47,80 @@ input[type=submit], input[type=button], button { -webkit-appearance: none; outli
 |                                     HEADER                                   |
 ================================================================================
 */
-header { background: #f0f0f0 url(../img/bg_header.jpg) no-repeat left top; width: 100%; text-align: left; position: fixed; top: 0; z-index: 10; }
+header { background: #ffffff url(../img/bg_header.jpg) no-repeat left top; width: 100%; text-align: left; position: fixed; top: 0; z-index: 10; }
 
 header .wrapper { height: 56px; padding: 0 16px; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; }
 
-.hamburger { position: relative; width: 40px; height: 40px; }
+header .wrapper .hamburger { margin: 0 16px 0 0; }
+
+/* START: Searchbox */
+.searchbox { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-flex: 1; -webkit-flex-grow: 1; -ms-flex-positive: 1; flex-grow: 1; -webkit-flex-basis: .000000001px; -ms-flex-preferred-size: .000000001px; flex-basis: .000000001px; }
+
+.searchbox form { max-width: 640px; width: 100%; margin: 0 auto; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; }
+
+.searchbox form .container { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-flex: 1; -webkit-flex-grow: 1; -ms-flex-positive: 1; flex-grow: 1; -webkit-flex-basis: .000000001px; -ms-flex-preferred-size: .000000001px; flex-basis: .000000001px; border: 1px solid #ccc; border-right: none; border-radius: 2px 0 0 2px; background-color: #fff; padding: 2px 6px; box-shadow: inset 0 1px 2px #eee; }
+
+.searchbox form .search_button { width: 65px; padding: 3px 6px; border: 1px solid #ccc; border-radius: 0 2px 2px 0; background-color: #f8f8f8; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; }
+
+.searchbox form .search_button .inner { width: 20px; height: 20px; opacity: .6; }
+
+/* FINISH: Searchbox */
+/* START: Logo */
+.logo { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-orient: horizontal; -webkit-box-direction: normal; -webkit-flex-direction: row; -ms-flex-direction: row; flex-direction: row; width: 129px; }
+
+.logo .logo_link { width: 80px; height: 24px; display: block; }
+
+.logo .country_code { font-size: 10px; font-family: Roboto, Arial, sans-serif; margin: 0 0 0 3px; }
+
+/* FINISH: Logo */
+/* START: Hamburger */
+.hamburger { position: relative; width: 40px; height: 40px; cursor: pointer; }
 
 .hamburger .inner { height: 100%; padding: 14px 11px; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; position: relative; z-index: 1; }
 
 .hamburger .inner .line { height: 2px; width: 100%; background-color: #606060; }
 
-.hamburger .animated { position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; border-radius: 50%; background-color: #C1C1C1; opacity: .6; }
+.hamburger .animated { position: absolute; top: 0; left: 0; bottom: 0; right: 0; width: 100%; height: 100%; -webkit-transform: scale(0); -ms-transform: scale(0); transform: scale(0); border-radius: 50%; background-color: #e7e7e7; opacity: 0; -webkit-animation: humburger-pulse-out .2s linear; animation: humburger-pulse-out .2s linear; }
 
+.hamburger.active .animated { -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); opacity: 1; -webkit-animation: humburger-pulse-in .2s linear; animation: humburger-pulse-in .2s linear; }
+
+@-webkit-keyframes humburger-pulse-in { from { -webkit-transform: scale(0); transform: scale(0);
+    opacity: 0;
+    background-color: #e7e7e7; }
+  80% { -webkit-transform: scale(1.2); transform: scale(1.2);
+    background-color: #919191; }
+  to { -webkit-transform: scale(1); transform: scale(1);
+    opacity: 1;
+    background-color: #e7e7e7; } }
+
+@keyframes humburger-pulse-in { from { -webkit-transform: scale(0); transform: scale(0);
+    opacity: 0;
+    background-color: #e7e7e7; }
+  80% { -webkit-transform: scale(1.2); transform: scale(1.2);
+    background-color: #919191; }
+  to { -webkit-transform: scale(1); transform: scale(1);
+    opacity: 1;
+    background-color: #e7e7e7; } }
+
+@-webkit-keyframes humburger-pulse-out { from { -webkit-transform: scale(1); transform: scale(1);
+    opacity: 1;
+    background-color: #e7e7e7; }
+  20% { -webkit-transform: scale(1.2); transform: scale(1.2);
+    background-color: #919191; }
+  to { -webkit-transform: scale(0); transform: scale(0);
+    opacity: 0;
+    background-color: #e7e7e7; } }
+
+@keyframes humburger-pulse-out { from { -webkit-transform: scale(1); transform: scale(1);
+    opacity: 1;
+    background-color: #e7e7e7; }
+  20% { -webkit-transform: scale(1.2); transform: scale(1.2);
+    background-color: #919191; }
+  to { -webkit-transform: scale(0); transform: scale(0);
+    opacity: 0;
+    background-color: #e7e7e7; } }
+
+/* FINISH: Hamburger */
 /*
 ================================================================================
 |                                     FOOTER                                   |
@@ -69,12 +131,6 @@ footer { background: #000 url(../img/bg_footer.jpg) no-repeat left top; height: 
 .main-wrapper { padding: 0 0 0 0; min-width: 320px; width: 100%; position: relative; overflow: hidden; min-height: 100%; display: -webkit-box; display: -ms-flexbox; display: -webkit-flex; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; flex-direction: column; -webkit-flex-direction: column; -ms-flex-direction: column; -webkit-box-pack: start; justify-content: flex-start; -webkit-justify-content: flex-start; -ms-flex-pack: start; }
 
 .content { margin: 56px 0 0 240px; }
-
-.content .hamburger { position: relative; width: 200px; height: 200px; }
-
-.content .hamburger .inner { padding: 45px 35px; display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: justify; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -webkit-flex-direction: column; -ms-flex-direction: column; flex-direction: column; position: relative; z-index: 1; }
-
-.content .hamburger .inner .line { height: 6px; width: 100%; background-color: #606060; }
 
 /* titles */
 p { font-size: 13px; line-height: 18px; color: #000; padding: 15px 0 15px 0; font-weight: 400; }
