--- a/app/scss/layout/_aside.scss
+++ b/app/scss/layout/_aside.scss
@@ -4,7 +4,7 @@ aside {
   right: auto;
   top: 0;
   bottom: 0;
-  width: 240px;
+  width: $sidebar-width;
   background-color: #ccc;
   z-index: 9;
 }
