--- a/app/scss/layout/_content.scss
+++ b/app/scss/layout/_content.scss
@@ -22,26 +22,8 @@
 }
 
 .content {
-	margin: 56px 0 0 240px;
-	.hamburger {
-		position: relative;
-		width: 200px;
-		height: 200px;
-		.inner {
-			padding: 45px 35px;
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			flex-direction: column;
-			position: relative;
-			z-index: 1;
-			.line {
-				height: 6px;
-				width: 100%;
-				background-color: #606060;
-			}
-		}
-	}
+	margin: $header-height 0 0 $sidebar-width;
+
 }
 
 
