--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -5,7 +5,7 @@
 ================================================================================
 */
 header{
-	background:#f0f0f0 url(../img/bg_header.jpg) no-repeat left top;
+	background:#ffffff url(../img/bg_header.jpg) no-repeat left top;
 	width:100%;
 	text-align:left;
 
@@ -14,18 +14,88 @@ header{
 	z-index: 10;
 
 	.wrapper {
-		height: 56px;
+		height: $header-height;
 		padding: 0 16px;
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+
+		.hamburger {
+			margin: 0 16px 0 0;
+		}
+
+
 	}
 }
 
+/* START: Searchbox */
+.searchbox {
+	display: flex;
+	flex-grow: 1;
+	flex-basis: .000000001px;
+
+	form {
+		max-width: 640px;
+		width: 100%;
+		margin: 0 auto;
+		display: flex;
+
+		.container {
+			display: flex;
+			flex-grow: 1;
+			flex-basis: .000000001px;
+			border: 1px solid #ccc;
+			border-right: none;
+			border-radius: 2px 0 0 2px;
+			background-color: #fff;
+			padding: 2px 6px;
+			box-shadow: inset 0 1px 2px #eee;
+		}
+
+		.search_button {
+			width: 65px;
+			padding: 3px 6px;
+			border: 1px solid #ccc;
+			border-radius: 0 2px 2px 0;
+			background-color: #f8f8f8;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			.inner {
+				width: 20px;
+				height: 20px;
+				opacity: .6;
+			}
+		}
+	}
+}
+/* FINISH: Searchbox */
+
+/* START: Logo */
+.logo {
+	display: flex;
+	flex-direction: row;
+	width: 129px;
+	.logo_link {
+		width: 80px;
+		height: 24px;
+		display: block;
+	}
+	.country_code {
+		font-size: 10px;
+		font-family: Roboto, Arial, sans-serif;
+		margin: 0 0 0 3px;
+	}
+}
+/* FINISH: Logo */
+
+
+/* START: Hamburger */
 .hamburger {
 	position: relative;
 	width: 40px;
 	height: 40px;
+	cursor: pointer;
 	.inner {
 		height: 100%;
 		padding: 14px 11px;
@@ -49,11 +119,56 @@ header{
 		right: 0;
 		width: 100%;
 		height: 100%;
+		transform: scale(0);
 		border-radius: 50%;
-		background-color: #C1C1C1;
-		opacity: .6;
+		background-color: #e7e7e7;
+		opacity: 0;
+		animation: humburger-pulse-out .2s linear;
+	}
+
+	&.active .animated {
+		transform: scale(1);
+		opacity: 1;
+		animation: humburger-pulse-in .2s linear;
 	}
 }
+
+@keyframes humburger-pulse-in {
+	from {
+		transform: scale(0);
+		opacity: 0;
+		background-color: #e7e7e7;
+	}
+	80% {
+		transform: scale(1.2);
+		background-color: #919191;
+	}
+	to {
+		transform: scale(1);
+		opacity: 1;
+		background-color: #e7e7e7;
+	}
+}
+
+@keyframes humburger-pulse-out {
+	from {
+		transform: scale(1);
+		opacity: 1;
+		background-color: #e7e7e7;
+	}
+	20% {
+		transform: scale(1.2);
+		background-color: #919191;
+	}
+	to {
+		transform: scale(0);
+		opacity: 0;
+		background-color: #e7e7e7;
+	}
+}
+/* FINISH: Hamburger */
+
+
 
 
 
