--- a/app/scss/utils/_variables.scss
+++ b/app/scss/utils/_variables.scss
@@ -22,3 +22,7 @@ $font-size-h2: 32px;
 $line-height-h2: 37px;
 $font-size-h3: 28px;
 $line-height-h3: 32px;
+
+//
+$header-height: 56px;
+$sidebar-width: 240px;
