--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -22,6 +22,9 @@ html(xmlns='http://www.w3.org/1999/xhtml')
           include ./components/hamburger
           include ./components/logo.pug
           include ./components/searchbox.pug
+          .buttons
+            include ./components/avatar.pug
+
       // HEADER EOF
       // BEGIN SIDEBAR
       aside
