--- a/app/css/style.css
+++ b/app/css/style.css
@@ -53,6 +53,14 @@ header .wrapper { height: 56px; padding: 0 16px; display: -webkit-box; display: 
 
 header .wrapper .hamburger { margin: 0 16px 0 0; }
 
+.avatar { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
+
+.avatar button { background-color: transparent; border: none; outline: none; padding: 1px 6px; }
+
+.avatar button span { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; width: 32px; height: 32px; border-radius: 50%; overflow: hidden; margin: 0 8px; cursor: pointer; }
+
+.avatar button span img { width: 32px; height: 32px; display: block; }
+
 /* START: Searchbox */
 .searchbox { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-flex: 1; -webkit-flex-grow: 1; -ms-flex-positive: 1; flex-grow: 1; -webkit-flex-basis: .000000001px; -ms-flex-preferred-size: .000000001px; flex-basis: .000000001px; }
 
