--- a/app/pug/components/avatar-btn.pug
+++ b/app/pug/components/avatar-btn.pug
@@ -1,4 +1,4 @@
 .avatar
-    button
-        span
+    button.button_transparent
+        span.img_wrap
             image(src="https://yt3.ggpht.com/-rMvpUlx0EeY/AAAAAAAAAAI/AAAAAAAAAAA/ACHi3rcWz2rScGz3ZegqqHIdthlVrpWzHg/s88-c-k-c0xffffffff-no-rj-mo/photo.jpg")
