--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -19,11 +19,14 @@ html(xmlns='http://www.w3.org/1999/xhtml')
       // BEGIN HEADER
       header
         .wrapper
-          include ./components/hamburger
+          include ./components/hamburger-btn.pug
           include ./components/logo.pug
           include ./components/searchbox.pug
           .buttons
-            include ./components/avatar.pug
+            include ./components/meet-btn.pug
+            include ./components/menu-btn.pug
+            include ./components/notifications-btn.pug
+            include ./components/avatar-btn.pug
 
       // HEADER EOF
       // BEGIN SIDEBAR
