--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -24,21 +24,95 @@ header{
 			margin: 0 16px 0 0;
 		}
 
-
+        .buttons {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          .notifications,
+          .menu,
+          .meet {
+            margin: 0 8px 0 0;
+          }
+        }
 	}
 }
 
+button.button_transparent {
+  outline: none;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+}
+
+/* START: meet */
+.meet {
+  .inner {
+    padding: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .image_wrap {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 24px;
+      height: 24px;
+      fill: rgb(96, 96, 96);
+      stroke: none;
+    }
+  }
+}
+/* FINISH: meet */
+
+/* START: menu */
+.menu {
+  .inner {
+    padding: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .image_wrap {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 24px;
+      height: 24px;
+      fill: rgb(96, 96, 96);
+      stroke: none;
+    }
+  }
+}
+/* FINISH: menu */
+
+/* START: notifications */
+.notifications {
+  .inner {
+    padding: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    .image_wrap {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 24px;
+      height: 24px;
+      fill: rgb(96, 96, 96);
+      stroke: none;
+    }
+  }
+}
+/* FINISH: notifications */
+
+/* START: avatar */
 .avatar {
   display: flex;
   justify-content: center;
   align-items: center;
 
   button {
-    background-color: transparent;
-    border: none;
-    outline: none;
     padding: 1px 6px;
-    span {
+    .img_wrap {
       display: flex;
       align-items: center;
       justify-content: center;
@@ -56,6 +130,7 @@ header{
     }
   }
 }
+/* FINISH: avatar */
 
 /* START: Searchbox */
 .searchbox {
@@ -178,26 +253,36 @@ header{
 			background-color: #606060;
 		}
 	}
-	.animated {
-		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
-		width: 100%;
-		height: 100%;
-		transform: scale(0);
-		border-radius: 50%;
-		background-color: #e7e7e7;
-		opacity: 0;
-		animation: humburger-pulse-out .2s linear;
-	}
+}
 
-	&.active .animated {
-		transform: scale(1);
-		opacity: 1;
-		animation: humburger-pulse-in .2s linear;
-	}
+.btn {
+  position: relative;
+  .inner {
+    z-index: 1;
+    position: relative;
+  }
+
+  .animated {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    transform: scale(0);
+    border-radius: 50%;
+    background-color: #e7e7e7;
+    opacity: 0;
+    animation: humburger-pulse-out .2s linear;
+    z-index: 0;
+  }
+
+  .animated.active {
+    transform: scale(1);
+    opacity: 1;
+    animation: humburger-pulse-in .2s linear;
+  }
 }
 
 @keyframes humburger-pulse-in {
