--- a/app/scss/base/_fonts.scss
+++ b/app/scss/base/_fonts.scss
@@ -27,3 +27,46 @@
 	font-stretch: normal;
 	unicode-range: U+0020-FFFD;
 }
+
+/* Roboto */
+@font-face {
+	font-family: 'Roboto';
+	src: url('../fonts/roboto/RobotoRegular/RobotoRegular.eot');
+	src: url('../fonts/roboto/RobotoRegular/RobotoRegular.eot?#iefix') format('embedded-opentype'), url('../fonts/roboto/RobotoRegular/RobotoRegular.woff') format('woff'), url('../fonts/roboto/RobotoRegular/RobotoRegular.ttf') format('truetype'), url('../fonts/roboto/RobotoRegular/RobotoRegular.svg#RobotoRegular') format('svg');
+	font-weight: 400;
+	font-style: normal;
+	font-stretch: normal;
+	unicode-range: U+0020-FFFD;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('../fonts/roboto/RobotoBold/RobotoBold.eot');
+	src: url('../fonts/roboto/RobotoBold/RobotoBold.eot?#iefix') format('embedded-opentype'), url('../fonts/roboto/RobotoBold/RobotoBold.woff') format('woff'), url('../fonts/roboto/RobotoBold/RobotoBold.ttf') format('truetype'), url('../fonts/roboto/RobotoBold/RobotoBold.svg#RobotoBold') format('svg');
+	font-weight: 700;
+	font-style: normal;
+	font-stretch: normal;
+	unicode-range: U+0020-FFFD;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('../fonts/roboto/RobotoLight/RobotoLight.eot');
+	src: url('../fonts/roboto/RobotoLight/RobotoLight.eot?#iefix') format('embedded-opentype'), url('../fonts/roboto/RobotoLight/RobotoLight.woff') format('woff'), url('../fonts/roboto/RobotoLight/RobotoLight.ttf') format('truetype'), url('../fonts/roboto/RobotoLight/RobotoLight.svg#RobotoLight') format('svg');
+	font-weight: 300;
+	font-style: normal;
+	font-stretch: normal;
+	unicode-range: U+0020-FFFD;
+}
+
+@font-face {
+	font-family: 'Roboto';
+	src: url('../fonts/roboto/RobotoMedium/RobotoMedium.eot');
+	src: url('../fonts/roboto/RobotoMedium/RobotoMedium.eot?#iefix') format('embedded-opentype'), url('../fonts/roboto/RobotoMedium/RobotoMedium.woff') format('woff'), url('../fonts/roboto/RobotoMedium/RobotoMedium.ttf') format('truetype'), url('../fonts/roboto/RobotoMedium/RobotoMedium.svg#RobotoMedium') format('svg');
+	font-weight: 500;
+	font-style: normal;
+	font-stretch: normal;
+	unicode-range: U+0020-FFFD;
+}
+
+
