--- a/app/scss/base/_reset.scss
+++ b/app/scss/base/_reset.scss
@@ -113,9 +113,7 @@ button {
 	box-sizing: border-box;
 }
 
-.clearfix:after,
-.wrapper:after,
-.row:after{
+.clearfix:after {
 	content: ".";
 	display: block;
 	height: 0;
