--- a/app/scss/layout/_content.scss
+++ b/app/scss/layout/_content.scss
@@ -1,71 +1,74 @@
-
-//main styles
-
-.main-wrapper{
-	padding: 0 0 0 0;
-	min-width: $min-width;
-    width: 100%;
-	position: relative;
-	overflow: hidden;
-	min-height:100%;
-	display: -webkit-box;
-	display: -moz-box;
-	display: -ms-flexbox;
-	display: -webkit-flex;
-	display: flex;
-	flex-direction:column;
-    -webkit-flex-direction:column;
-    -ms-flex-direction: column;
-	justify-content:flex-start;	
-    -webkit-justify-content:flex-start;	
-    -ms-flex-pack: start;
+html {
+    font-size: 10px;
+    font-family: Roboto, Arial, sans-serif;
 }
-
-.content {
-	margin: $header-height 0 0 $sidebar-width;
-
-}
-
-
-
-
 
 /* titles */
-p{	
-	@include font($base-font-size,$base-line-height,$text-color);
-	padding: 15px 0 15px 0;
-	font-weight: 400;	
+p {
+    @include font($base-font-size, $base-line-height, $text-color);
+    padding: 15px 0 15px 0;
+    font-weight: 400;
 }
-h1{	
-	@include font($font-size-h1,$line-height-h1,$title-color);
-	font-family: $title-font-family;
-	padding: 15px 0 15px 0;
-	font-weight: 400;	
+
+h1 {
+    @include font($font-size-h1, $line-height-h1, $title-color);
+    font-family: $title-font-family;
+    padding: 15px 0 15px 0;
+    font-weight: 400;
 }
-h2{
-	@include font($font-size-h2,$line-height-h2,$title-color);
-	font-family: $title-font-family;
-	padding: 15px 0 15px 0;
-	font-weight: 400;	
+
+h2 {
+    @include font($font-size-h2, $line-height-h2, $title-color);
+    font-family: $title-font-family;
+    padding: 15px 0 15px 0;
+    font-weight: 400;
 }
-h3{
-	@include font($font-size-h3,$line-height-h3,$title-color);
-	font-family: $title-font-family;
-	padding: 15px 0 15px 0;
-	font-weight: 400;
+
+h3 {
+    @include font($font-size-h3, $line-height-h3, $title-color);
+    font-family: $title-font-family;
+    padding: 15px 0 15px 0;
+    font-weight: 400;
 }
 
 /* text position */
-.text-left{text-align: left!important}
-.text-center{text-align: center!important}
-.text-right{text-align: right!important}
-.nowrap{white-space: nowrap!important;}
+.text-left {
+    text-align: left !important
+}
+
+.text-center {
+    text-align: center !important
+}
+
+.text-right {
+    text-align: right !important
+}
+
+.nowrap {
+    white-space: nowrap !important;
+}
 
 
 /* loader */
-.loaded .main-wrapper{visibility:hidden;}
-.icon-load{background:url(../img/loader.gif) no-repeat left top;width:40px;height:40px;position:fixed;left:50%;top:50%;margin-left:-20px;margin-left:-20px;display:none;}
-.loaded .icon-load{display:block;}
+.loaded .main-wrapper {
+    visibility: hidden;
+}
+
+.icon-load {
+    background: url(../img/loader.gif) no-repeat left top;
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    margin-left: -20px;
+    margin-left: -20px;
+    display: none;
+}
+
+.loaded .icon-load {
+    display: block;
+}
 
 
 /*
@@ -73,46 +76,86 @@ h3{
 |                                     CONTENT                                 |
 ================================================================================
 */
-.content{	
-	min-width: $min-width;
-	text-align:left;
+
+
+.main_wrapper {
+    padding: 0 0 0 0;
+    min-width: $min-width;
     width: 100%;
-	order: 2;
-    -webkit-order: 2;
-	flex-grow: 1;
-    -webkit-flex-grow: 1;
-	background: #fff;
+    position: relative;
+    overflow: hidden;
+    min-height: 100%;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    justify-content: flex-start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+
+    .main_content {
+        margin: $header-height 0 0 $sidebar-width;
+        min-width: $min-width;
+        text-align: left;
+        order: 2;
+        -webkit-order: 2;
+        flex-grow: 1;
+        -webkit-flex-grow: 1;
+        background: #fff;
+
+        /* centering of the content inside .main_content */
+        .wrapper {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .inner {
+                width: 1284px;
+            }
+        }
+    }
 }
 
-.wrapper {
-	height: 100%;
-}
+.items_section {
+    .title {
+        margin: 24px 0 0;
+        padding: 0;
+        color: #0d0d0d;
+        display: block;
+        max-height: 2rem;
+        overflow: hidden;
+        font-size: 1.6rem;
+        font-weight: 500;
+        line-height: 2rem;
+    }
 
-.dnk_wrapper {
-	display: flex;
-	justify-content: center;
+    .content
 }
 
 
 
 @media screen and (max-width: 1200px) {
-	
+
 }
 
-@media screen and (min-width: 992px){
-	
+@media screen and (min-width: 992px) {
+
 }
 
 @media screen and (max-width: 991px) {
-	
+
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
-	
+
 }
 
 @media screen and (max-width: 767px) {
-	
+
 }
 
 
