--- a/app/scss/utils/_variables.scss
+++ b/app/scss/utils/_variables.scss
@@ -5,7 +5,7 @@ $base-bg: #FFF;
 $base-font-size: 13px; 
 $base-line-height: 18px; 
 $base-font-family: Arial, sans-serif; 
-$custom-font-family: 'Open Sans', sans-serif; 
+$custom-font-family: Roboto, 'Open Sans', sans-serif;
 $link-color: #100da9;
 $default-transition:all 0.2s linear;
 
