--- a/app/pug/components/content/content.pug
+++ b/app/pug/components/content/content.pug
@@ -15,4 +15,4 @@ main.main_content
                                         .time_status
 
 
-                            .details
+                            .details some details
