--- a/app/pug/components/content/content.pug
+++ b/app/pug/components/content/content.pug
@@ -11,10 +11,12 @@ main.main_content
                                 .inner
                                     .image_wrap
                                         img(src="img/grid1.webp")
-                                        .icon_play_wrap
-                                            svg.style-scope.yt-icon(viewbox='0 0 24 24' preserveaspectratio='xMidYMid meet' focusable='false' style='pointer-events: none; display: block; width: 100%; height: 100%;')
-                                                g.style-scope.yt-icon
-                                                    path.style-scope.yt-icon(d='M8 5v14l11-7z')
-                                        .overlays
-                                            .time_status
+                                        .items_overlays
+                                            .items_overlays_hover.overlays
+                                                .icon_play_wrap
+                                                    svg.style-scope.yt-icon(viewbox='0 0 24 24' preserveaspectratio='xMidYMid meet' focusable='false' style='pointer-events: none; display: block; width: 100%; height: 100%;')
+                                                        g.style-scope.yt-icon
+                                                            path.style-scope.yt-icon(d='M8 5v14l11-7z')
+                                            .items_overlays_unhover.overlays
+                                                .time_status
                             .details
